--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "discord.js": "^14.6.0",
     "node-fetch": "^3.3.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.52.0"
   }
 }
