--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.6.0",
+    "mongodb": "^6.3.0",
     "node-fetch": "^3.3.1",
     "sqlite3": "^5.1.6"
   },
