--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Zukaritasu",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.14.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "node-fetch": "^3.3.1",
     "sqlite3": "^5.1.6"
