--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "discord.js": "^14.14.1",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
-    "node-fetch": "^3.3.1",
-    "sqlite3": "^5.1.6"
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "^8.52.0"
